[package]
name = "attr-parser-fn"
version = "0.2.1"
edition = "2021"
description = "parse attribute procedual macros in functional way"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Fancyflame/derive-attr"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["attribute", "macro", "nom", "functional"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
impl_variadics = "0.3"
